--- a/plataforma/src/app/administrador/administrador.component.html
+++ b/plataforma/src/app/administrador/administrador.component.html
@@ -504,7 +504,7 @@
               required type="text" class="form-control">
             <datalist id="buscarCursoAsignacion">
               <option *ngFor="let oneDoor of vectorListadoCursos">
-                {{oneDoor.codigo}}.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;{{oneDoor.curso}},{{oneDoor.paralelo}}
+                {{oneDoor.dataValues.CODIGO_CURSO}},&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;{{oneDoor.CURSO}},{{oneDoor.PARALELO}}
               </option>
             </datalist>
 
@@ -600,7 +600,7 @@
                   name="selectedCursoAsignacion" required type="text" class="form-control">
                 <datalist id="listadoCursosAsignacion">
                   <option *ngFor="let oneDoor of vectorListadoCursos">
-                    {{oneDoor.codigo}}.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{oneDoor.curso}},{{oneDoor.paralelo}}
+                    {{oneDoor.CODIGO_CURSO}}.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{oneDoor.CURSO}},{{oneDoor.PARALELO}}
                   </option>
                 </datalist>
               </div>
@@ -682,7 +682,7 @@
                 <datalist id="listadoCursos">
                   <option *ngFor="let oneDoor of vectorListadoCursos">
 
-                    {{oneDoor.codigo}}.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{oneDoor.curso}},{{oneDoor.paralelo}}
+                    {{oneDoor.CODIGO_CURSO}}.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{oneDoor.CURSO}},{{oneDoor.PARALELO}}
                   </option>
                 </datalist>
               </div>
@@ -1134,7 +1134,7 @@
         <br>
         <select (change)="asignarMateriaCurso($event.target.value)" class=" custom-select " required>
           <option [value]="" selected>Selecciona materia y curso</option>
-          <option *ngFor="let oneDoor of this.vectorListadoCursos" value="{{oneDoor._id}},{{oneDoor.curso}} ">{{oneDoor.curso}}: {{oneDoor.paralelo}} {{oneDoor.curso.paralelo}}</option>
+          <option *ngFor="let oneDoor of this.vectorListadoCursos" value="{{oneDoor.ID_CURSO}},{{oneDoor.CURSO}} ">{{oneDoor.CURSO}}: {{oneDoor.PARALELO}} {{oneDoor.curso.PARALELO}}</option>
         </select>
       </div>
 
@@ -1265,7 +1265,7 @@
               required type="text" class="form-control">
             <datalist id="listadoCursosAsignacion">
               <option *ngFor="let oneDoor of vectorListadoCursos">
-                {{oneDoor.codigo}}.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{oneDoor.curso}},{{oneDoor.paralelo}}
+                {{oneDoor.CODIGO_CURSO}}.&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{oneDoor.CURSO}},{{oneDoor.PARALELO}}
               </option>
             </datalist>
 
