--- a/plataforma/src/app/estudiante/estudiante.component.html
+++ b/plataforma/src/app/estudiante/estudiante.component.html
@@ -32,15 +32,15 @@
           <li> <button id="btnTraerNotas" style="display: none" (click)="traerNotas()">HOla prueba</button></li>
           <li> <button id="btnTraerNotasB" style="display: none" (click)="traerNotasB()">HOla prueba</button></li>
         <li>
-          <p style="color: #ffffff">Usuario Activo: {{identity.nombre}} {{identity.apellido}} 
+          <p style="color: #ffffff">Usuario Activo: {{identity.NOMBRE_ESTUDIANTE}} {{identity.APELLIDO_ESTUDIANTE}} 
           </p>
         </li>
         <li>
-          &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+        
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;</li>
         <li>
-          <p style="color: #ffffff">Periodo Actual {{this.periodoLectivoActual}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+          <p style="color: #ffffff">Periodo Actual: {{this.periodoLectivoActual}} &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
           </p>
         </li>
 <!--        <li>
