LISTO PARA ENTRAR A LA CARGA DE LAS TABLAS DEL DOCENTE

--- a/plataforma/src/app/docente/docente.component.html
+++ b/plataforma/src/app/docente/docente.component.html
@@ -40,7 +40,7 @@
         <li>
           <select (change)="asignarMateriaCurso($event.target.value)" class=" custom-select " required>
             <option [value]="" selected>Selecciona materia y curso</option>
-            <option *ngFor="let oneDoor of vectorListadoMisMaterias" value="{{oneDoor.curso._id}},{{oneDoor._id}},{{oneDoor.curso.curso}},{{oneDoor.nombre}},{{oneDoor.curso.paralelo}} ">{{oneDoor.nombre}}: {{oneDoor.curso.curso}}  {{oneDoor.curso.paralelo}}</option>
+            <option *ngFor="let oneDoor of vectorListadoMisMaterias" value="{{oneDoor.CURSO.ID_CURSO}},{{oneDoor.ID_MATERIA}},{{oneDoor.CURSO.CURSO}},{{oneDoor.NOMBRE_MATERIA}},{{oneDoor.CURSO.PARALELO}} ">{{oneDoor.NOMBRE_MATERIA}}: {{oneDoor.CURSO.CURSO}}  {{oneDoor.CURSO.PARALELO}}</option>
           </select>
 
 
@@ -958,7 +958,7 @@
       <tbody>
         <tr *ngFor=" let listado of  listadoEstudianteMatriculas; let i = index; let listadoN of listadoEstudianteNotas">
           <th scope="row">{{i}}</th>
-          <td colspan="1" valign="middle" >{{listado.estudiante.apellido}} {{listado.estudiante.nombre}} </td>
+          <td colspan="1" valign="middle" >{{listado.ESTUDIANTE.APELLIDO_ESTUDIANTE}} {{listado.ESTUDIANTE.NOMBRE_ESTUDIANTE}} </td>
 
 
         <td id="tdfila">
