LISTO REPORTE FINAL

--- a/plataforma/src/app/administrador/administrador.component.html
+++ b/plataforma/src/app/administrador/administrador.component.html
@@ -1159,7 +1159,7 @@
             <th scope="row">{{i+1}}</th>
             <td class="active">{{listado.ESTUDIANTE.APELLIDO_ESTUDIANTE}} {{listado.ESTUDIANTE.NOMBRE_ESTUDIANTE}}</td>
             <td class="active" *ngFor=" let listad of  this.nuevo2[i]">{{listad}}</td>
-
+            <!--<td class="active" *ngFor=" let listad of  this.objNotasPT">{{listad}}</td>-->
 
           </tr>
         </tbody>
